fix: quotes list spacing and actions hover

--- a/src/styles/components/_quote-card.scss
+++ b/src/styles/components/_quote-card.scss
@@ -35,6 +35,9 @@
     bottom: 0;
     cursor: pointer;
     padding: 0.8rem;
+    &:hover {
+      color: $color-primary;
+    }
     &--copy {
       right: 0;
     }
