--- a/src/styles/components/_quotes-list.scss
+++ b/src/styles/components/_quotes-list.scss
@@ -1,6 +1,6 @@
 .quotes-list {
   &__title {
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
     line-height: 4.6rem;
   }
   &__list {
