--- a/src/styles/components/_search-bar.scss
+++ b/src/styles/components/_search-bar.scss
@@ -1,6 +1,6 @@
 .search-bar {
   max-width: 48rem;
-  margin: 1.6rem auto;
+  margin: 2.4rem auto;
   position: relative;
   &__input {
     appearance: none;
